# Ticket-System

./: .gitignore  CMakeLists.txt  account.cpp  account.hpp  base.hpp  bpt.hpp  double_list.hpp  headers.hpp  input_process.cpp  input_process.hpp  main.cpp  map.hpp  readme.md  strcheck.cpp  strcheck.hpp  time.cpp  time.hpp  train.cpp  train.hpp  utility.hpp  vector.hpp
backup/: account.r  callgrind.out.213596  history.r  queue.r  serials.r  train.ind  train.r
data_structures/: base.hpp  bpt.hpp  headers.hpp  vector.hpp
rundir2/: every_train.r  station.r  stats
src/: headers.hpp
utilities/: account.cpp  account.hpp  headers.hpp  input_process.cpp  time.cpp  time.hpp  train.cpp  train.hpp
